s/Subscriber Profile Fields/Profile Fields/

--- a/dada/templates/membership_screen.tmpl
+++ b/dada/templates/membership_screen.tmpl
@@ -302,7 +302,7 @@
     			<!-- tmpl_unless expr="(root_login == 1 || list_settings.allow_profile_editing == 1)" --> 
 					<div class="clearskiesbox">
 						<p>
-							Editing Subscriber Profile Fields is <strong>disabled</strong>. 
+							Editing Profile Fields is <strong>disabled</strong>. 
 						</p>
 					</div>
 
@@ -320,7 +320,7 @@
 				<!-- tmpl_if expr="(root_login == 1 || list_settings.allow_profile_editing == 1)" --> 
 
                     <p class="alert">
-						Subscriber Profile Fields information will be changed for all Mailing Lists.
+						Profile Fields information will be changed for all Mailing Lists.
 					</p>
 					<!-- tmpl_loop fields --> 
 					    <p>
