--- a/dada/templates/add_email_screen.tmpl
+++ b/dada/templates/add_email_screen.tmpl
@@ -84,7 +84,7 @@
 <!-- /tmpl_if -->
 
 <!-- tmpl_if expr="(type eq 'list')" --> 
-    <!-- tmpl_unless "((list_settings.allow_profile_editing == 1) || (root_login == 1))"-->
+    <!-- tmpl_unless expr="((list_settings.allow_profile_editing == 1) || (root_login == 1))"-->
         <div class="clearskiesbox">
             <p>
                 Profile Field Editing is <strong>Disabled.</strong>
@@ -849,28 +849,20 @@
     <!-- /tmpl_if --> 
     
     <!-- tmpl_if expr="(type eq 'list')" -->
-        <!-- tmpl_if not_members --> 
+    
+        <!-- tmpl_if show_invitation_button --> 
             <input type="submit"  name="process" value="Send Invitation... &rArr;" <!-- tmpl_if list_settings.closed_list -->disabled="disabled" class="disabled"<!-- tmpl_else -->class="processing addingemail"<!-- /tmpl_if --> />
         <!-- /tmpl_if --> 
     <!-- /tmpl_if -->
     
-    <!-- tmpl_if expr="(type eq 'list')" -->         
-        
-        
-        
-        <!-- tmpl_unless not_members --> 
-            <!-- tmpl_if subscribed -->             
-                <!-- tmpl_if expr="(root_login == 1 || list_settings.allow_profile_editing == 1)" --> 
-                    <input type="submit" class="processing addingemail"name="process"  value="Update Checked Addresses &rArr;" />            
-                <!-- /tmpl_if --> 
-            <!-- /tmpl_if --> 
+    <!-- tmpl_if expr="(type eq 'list')" -->     
+        <!-- tmpl_if show_update_button --> 
+            <input type="submit" class="processing addingemail"name="process"  value="Update Checked Addresses &rArr;" />            
         <!-- tmpl_else --> 
-        
-            <input type="submit" <!-- tmpl_unless expr="((list_settings.enable_mass_subscribe == 1) && ((root_login == 1) || (list_settings.enable_mass_subscribe_only_w_root_login != 1)))" --> disabled="disabled" class="disabled"<!-- tmpl_else -->class="processing addingemail warnAboutMassSubscription"<!-- /tmpl_unless -->  name="process"  value="Subscribe/Update Checked Addresses &rArr;" />            
-            
-        <!-- /tmpl_unless --> 
-        
-        
+            <!-- tmpl_if show_add_button --> 
+                <input type="submit" <!-- tmpl_unless expr="((list_settings.enable_mass_subscribe == 1) && ((root_login == 1) || (list_settings.enable_mass_subscribe_only_w_root_login != 1)))" --> disabled="disabled" class="disabled"<!-- tmpl_else -->class="processing addingemail warnAboutMassSubscription"<!-- /tmpl_unless -->  name="process"  value="Subscribe/Update Checked Addresses &rArr;" />            
+            <!-- /tmpl_if -->         
+        <!-- /tmpl_if --> 
         
     <!-- tmpl_else --> 
         <input type="submit" class="processing addingemail" name="process"  value="Add Checked Addresses to <!-- tmpl_var type_title --> &rArr;" />
