--- a/dada/templates/error_closed_list_screen.tmpl
+++ b/dada/templates/error_closed_list_screen.tmpl
@@ -8,8 +8,7 @@
 <!-- /tmpl_unless -->
 
 <p>
- This list you are trying to subscribe to is <strong>Closed</strong>. Only the List Owner can 
-subscribe people to the mailing list.
+ This list you are trying to subscribe to is <strong>Closed</strong>.
 </p>
 
 <!-- tmpl_include error_footer_widget.tmpl -->
