--- a/dada/templates/add_screen.tmpl
+++ b/dada/templates/add_screen.tmpl
@@ -143,7 +143,7 @@
 <!-- /tmpl_if --> 
 
 	<fieldset> 
-		<legend>Upload Your Addresses:</legend>
+		<legend>Upload Your Addresses</legend>
 
 
         <p>	    
@@ -195,7 +195,7 @@
 
 
 	<fieldset> 
-		<legend>Paste Your Addresses Below:</legend>
+		<legend>Paste Your Addresses</legend>
 
 
 
