--- a/dada/templates/view_list_table_widget.tmpl
+++ b/dada/templates/view_list_table_widget.tmpl
@@ -31,7 +31,7 @@
     		<!-- /tmpl_if -->
         	
         	 <!-- tmpl_if expr="(type eq 'list')" -->
-                 Subscription Date:
+                 Subscription Date
             <!-- tmpl_else --> 
                  Addition Date:
             <!-- /tmpl_if --> 
