Slight change in wording

--- a/dada/templates/profile_fields_screen.tmpl
+++ b/dada/templates/profile_fields_screen.tmpl
@@ -158,7 +158,7 @@
     
 	<div class="clearskiesbox">
 	<p>
-	 Profile Fields are Global and will affect all Mailing Lists. 
+	 Profile Fields are <strong>Globa</strong>l and will affect all Mailing Lists. 
 	 You may only change the Profile Fields if you are logged in with the <!-- tmpl_var PROGRAM_NAME --> 
 	  Root Password.
 	</p>
