small doc/template tweaks.

--- a/dada/templates/profile_home.tmpl
+++ b/dada/templates/profile_home.tmpl
@@ -166,7 +166,7 @@ function confirm_profile_removal(form_name) {
 		    <!-- /tmpl_loop -->
 		
 			<div class="buttonfloat">	
-		    <input type="submit"  class="plain"  value="Update Information" /> 
+		    <input type="submit" value="Update Information" class="processing" /> 
 			</div>
 			<div class="floatclear"></div>
 			</form>
@@ -375,7 +375,7 @@ function confirm_profile_removal(form_name) {
 	        </p>
 
 		<div class="buttonfloat">	
-	    <input type="submit" class="plain" value="Confirm and Update Your New Profile Email Address" /> 
+	    <input type="submit"  class="processing" value="Confirm and Update Your New Profile Email Address" /> 
 		</div>
 		<div class="floatclear"></div>
 
@@ -427,7 +427,7 @@ function confirm_profile_removal(form_name) {
 	       </p>
 
 		<div class="buttonfloat">	
-	    <input type="submit"  class="plain"  value="Change Password" /> 
+	    <input type="submit"   class="processing"  value="Change Password" /> 
 		</div>
 		<div class="floatclear"></div>
 
