--- a/dada/templates/sending_monitor_index_screen.tmpl
+++ b/dada/templates/sending_monitor_index_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin sending_monitor_index_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="Mass Mailing Monitor &#187; Monitor Your Mailings" -->
+<!-- tmpl_set name="title" value="Mass Mailing &#187; Monitor Your Mailings" -->
 <div id="screen_meta" data-menu_highlight="sending_monitor"></div>
 
 
@@ -56,7 +56,7 @@
 <fieldset> 
 
 <legend>
-Current Mass Mailings:
+Current Mass Mailings
 </legend> 
 
 
