--- a/dada/templates/sending_monitor_screen.tmpl
+++ b/dada/templates/sending_monitor_screen.tmpl
@@ -5,7 +5,7 @@
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
-		Mass Mailing &#187; Monitor Your Mailings
+		Mass Mailing &#187; <a href="<!-- tmpl_var S_PROGRAM_URL -->?f=sending_monitor">Monitor Your Mailings</a>
 		<!-- tmpl_if header_subject_label --> 
 			 &#187;
 			 <!-- tmpl_var name="header_subject_label" escape="HTML" --> 
